--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fourth",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/Vgnttv/first-database/issues"
   },
-  "homepage": "https://github.com/Vgnttv/first-database#readme"
+  "homepage": "https://github.com/Vgnttv/first-database#readme",
+  "keywords": [],
+  "description": "",
+  "dependencies": {
+    "express": "^4.16.4",
+    "pg": "^6.4.2",
+    "sequelize": "^5.6.0"
+  }
 }
